# LinearCapR_ComputationalExperiments

./: .gitignore  .gitmodules  README.md  graph_config.json  graph_config.template.json  main.py  pyproject.toml  read_lincapr_profile.py
data/: NC_018871.1.fasta
graphs/accuracy_auc/: accuracy_auc_macro_auc.csv
graphs/accuracy_auc_longrange/: accuracy_auc_longrange_macro_auc.csv
graphs/accuracy_auc_longrange_turner1999/: accuracy_auc_longrange_turner1999_macro_auc.csv
graphs/accuracy_auc_turner1999/: accuracy_auc_turner1999_macro_auc.csv
graphs/dataset_summary/: dataset_summary.csv  dataset_summary.tex
graphs/runtime_memory/: bprna_fitting_results.csv  bprna_fitting_results.tex  rnacentral_fitting_results.csv  rnacentral_fitting_results.tex  runtime_memory_stats.csv
graphs/unpaired_run_lengths/: run_length_counts.csv  run_length_summary.csv
result/covid_lincapr_msa/: README.md  sarscov2_profile_tsne.covid_only.b100.csv  sarscov2_profile_tsne.total.b100.csv
result/profile/: NC_045512.profile.w10.txt  NC_045512.profile.w200.txt  NC_045512.profile.w500.txt  sarscov2_covid_only.txt  sarscov2_total.txt
result/time_memory/: benchmark_result.w100.bpRNA_1m_90.tsv  benchmark_result.w100.rnacentral.csv  benchmark_result.w200.bpRNA_1m_90.csv  benchmark_result.w400.bpRNA_1m_90.tsv  benchmark_result.w50.rnacentral.csv
scripts/: README.md  __init__.py
scripts/analysis/: NC_045512.2_analysis.py  __init__.py  benchmark_lincapr.py  lincapr_sarscov2.sh  sarscov2_beam_sweep.py  sarscov2_ensemble_energy.py  sarscov2_profile_tsne.py
scripts/common/: config.py  (+2 more)
(+137 files in other folders)
